--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="dialog_error_no_connection">ネットワークに接続できません。もう一度ご確認ください。</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="hello_blank_fragment">Anh DQ</string>
 </resources>
